syntax = "proto3";

option csharp_namespace = "IdGen.Grpc";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
package IdGenerator;

service IdGenerator {
  // Request a new Snowflake ID
  rpc GetSnowflakeId (google.protobuf.Empty) returns (SnowflakeIdResponse) {
    option (google.api.http) = {
      get: "/snowflake"
    };
  }
}

// The response message containing the Snowflake ID.
message SnowflakeIdResponse {
  // The int64 ID with Snowflake format
  int64 id = 1;
}
